--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,7 @@
         </div>
       </div>
     </div>
-    <script src="app.js" type="text/javascript"></script>
+    <!-- <script src="app.js" type="text/javascript"></script> -->
+    <script src="test.js" type="text/javascript"></script>
   </body>
 </html>
