--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <!-- <script src="app.js" type="text/javascript"></script> -->
-    <script src="test.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
+    <!-- <script src="test.js" type="text/javascript"></script> -->
   </body>
 </html>
