--- a/website/index.html
+++ b/website/index.html
@@ -41,6 +41,7 @@
           <div id="date"></div>
           <div id="temp"></div>
           <div id="content"></div>
+          <div id="city"></div>
         </div>
       </div>
     </div>
