--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
           class="myInput"
           id="feelings"
           placeholder="Enter your feelings here"
-          rows="9"
+          rows="4"
           cols="50"
           onfocus="this.placeholder = ''"
           onblur="this.placeholder = 'Enter your feelings here'"
@@ -36,12 +36,12 @@
         <button id="generate" type="submit">Generate</button>
       </div>
       <div class="holder entry">
-        <div class="title">Most Recent Entry</div>
+        <div class="title">Most Recent Entry:</div>
         <div id="entryHolder">
-          <div id="date"></div>
-          <div id="temp"></div>
-          <div id="content"></div>
-          <div id="city"></div>
+          <div id="date">8.14.2021</div>
+          <div id="temp">27.27</div>
+          <div id="content">happy</div>
+          <div id="city">bronix</div>
         </div>
       </div>
     </div>
